--- a/css/brand_slider.css
+++ b/css/brand_slider.css
@@ -1,7 +1,7 @@
 
 .brand_slider_section {
     width: 100%;
-    margin-top: 30px;   
+    margin-top: 50px;   
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,19 +9,45 @@
 
 .brand_slider_placeholder {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    width: 75%;
+    white-space: nowrap;
+    gap: 100px;
+    /* width: 75%; */
     height: 100px;
     background-color: #d9d9d9;
-    overflow: hidden; /* Skryje štvorce, ktoré sa posúvajú mimo */
+    /* overflow: hidden; */
     /* position: relative; */
+    
+    /* --d: 6s; */
 }
 
 .brand_slider_image {
-    width: 10%;
+    flex: 0 0 auto;
+    /* width: 8vw; */
+    /* width: 10%; */
+    width: 100px;
+    min-width: 100px;
     height: 80%;
     background-color: #7b7b7b;
-    transition: transform 0.5s ease;
+    transition: transform 0.5s ease-in-out;
 }
+
+.brand_slider_mechanism {
+    width: 80%;
+    overflow: hidden;
+    
+}
+
+/* .transition {
+    transition: all 1s ease-in-out;
+} */
+
+/* @keyframes r {
+    80% {
+        transform: translateX(-400%);
+    }
+    80.01% {
+        transform: translateX(100%);
+    }
+} */
