--- a/css/filter_menu.css
+++ b/css/filter_menu.css
@@ -34,7 +34,6 @@
 .filter_menu_item {
 	min-width: 160px;
 	max-width: 160px;
-	flex: 1 1 150px;
 	background-color: white;
 	line-height: 170%;
 	border: 1px solid #D9D9D9;
@@ -43,6 +42,7 @@
 	text-align: left;
 	font-family: Arial;
 	font-size: 20px;
+	user-select: none; /* aby sa to nedalo označiť myšou */
 }
 
 
