--- a/css/filter_menu.css
+++ b/css/filter_menu.css
@@ -13,7 +13,7 @@
 .filter_menu { 
 	display: flex;
 	justify-content: left;
-	width: 100%;
+	width: 100vw;
 	gap: 20px;
 	box-sizing: border-box;
 	padding: 0px 20px 20px 20px;
@@ -46,7 +46,7 @@
 }
 
 
-.filter_menu_item.special {
+.filter_menu_item.selected {
 	flex-grow: 0;
 	width: 140px;
 	color: white;
@@ -60,7 +60,7 @@
 }
 
 
-.filter_menu_item.special:hover { /* pre Filter tlačidlo zvlášť */
+.filter_menu_item.selected:hover { /* pre Filter tlačidlo zvlášť */
 	background-color: white;
 }
 
@@ -71,6 +71,7 @@
 	align-items: center;
 	background-color: transparent;
 	border: none;
+	user-select: none;
 }
 
 
