--- a/css/page_number_list.css
+++ b/css/page_number_list.css
@@ -4,7 +4,7 @@
 	display: flex;
 	gap: 10px;
 	height: auto;
-	width: 100%;
+	width: 80%;
 	padding-bottom: 50px;
 	justify-content: center;
 	align-content: center;
@@ -15,10 +15,9 @@
 	display: flex;
 	gap: 10px;
 	padding-bottom: 50px;
-	max-width: 25%;
-	
+	max-width: 37%;
 	overflow: hidden;
-
+	scroll-behavior: smooth;
 }
 
 .page_number_list button {
@@ -38,21 +37,16 @@
 }
 
 
-.page_number.active{
+.page_number.active, .page_number:hover{
 	outline: 1px solid #D9D9D9;
 }
 
-
-.page_number:hover {
-
-	outline: 1px solid #D9D9D9;
-}
 
 
 #prevBtn img, #nextBtn img {
 	height: 17px;
-}
 
+}
 
 
 
@@ -61,9 +55,13 @@
 }
 
 
-#prevBtn img:hover, #nextBtn img:hover {
+#prevBtn img:enabled:hover, #nextBtn img:enabled:hover { /* len ak je zapnutá, tak bude hover povolený */
 	filter: drop-shadow(0 0 5px black);
 }
 
 
+
+#prevBtn:disabled, #nextBtn:disabled {
+	opacity: 0.5;
+}
 
