--- a/css/product_item.css
+++ b/css/product_item.css
@@ -6,7 +6,6 @@
 
     width: 365px;
     height: 450px;
-
 }
 
 
@@ -27,13 +26,10 @@
 	width: 100%;
     height: 100%;
 	object-fit: cover;
+	user-select: none;
 }
 
 
-
-.product_item p.price {
-	font-weight: bold;
-}
 
 
 
