--- a/css/filter_big_menu.css
+++ b/css/filter_big_menu.css
@@ -1,27 +1,28 @@
+/* overlay pre menu */
 .filter_overlay {
-  position: fixed; /* Zabezpečí, že filter ostane na rovnakom mieste aj pri scrollovaní */
+  position: fixed; 
   top: 0;
   right: 0;
   width: 100%;
-  height: 100vh; /* Výška na celú obrazovku */
+  height: 100vh; /* výška celej obrazovky */
   background: rgba(0, 0, 0, 0.5);
   
-
   display: flex;
   align-content: center;
   justify-content: center;
 
   transition: 0.2s;
-  z-index: 1001; /* Veľké číslo zabezpečí, že je filter nad všetkým */
-  display: none; /* Skryté pred zobrazením */
+  z-index: 1001; 
+  display: none; /* zobrazí sa len stlačením tlačidla */
 }
 
 
+/* kontajner pre filter menu */
 #filter_container {
   display: flex;
   margin: auto;
-  flex-direction: column; /* Ak chceš, aby child elementy boli vertikálne */
-  justify-content: center; /* Zarovnávanie vnútorných elementov */
+  flex-direction: column; 
+  justify-content: center; 
   align-items: center;
   width: 1000px;
   height: 80%;
@@ -75,6 +76,8 @@
 }
 
 
+
+/* sekcia vybraných filterov */
 .selected_filters {
   display: flex;
   height: 30px;
@@ -84,6 +87,7 @@
 }
 
 
+/* kontajner aktívych filterov */
 #sel_filter_container {
   display: flex;
   flex-wrap: nowrap;
@@ -121,16 +125,14 @@
 
 /* obsah filter menu */
 .filter_content {
-
   display: flex;
-  
   width: 100%;
   height: 100%;
   justify-content: left;
-
 }
 
 
+/* sidebar tlačidiel vo filter menu */
 .filter_category {
   display: flex;
   flex-direction: column;
@@ -142,6 +144,7 @@
 }
 
 
+/* tlačidlá sidebaru vo filter menu */
 .filter_category .fil_cat, .fil_cat_selected {
   margin-top: 12px;
   height: 50px;
@@ -238,7 +241,6 @@
 }
 
 
-
 .custom-checkbox input:checked + .checkmark {
   background-color: black;
   border-color: black;
@@ -275,7 +277,7 @@
 
 
 
-
+/* farebný štvorček v tlačidlách pre farby */
 .cat_entry_btn .color-box {
   width: 20px;
   height: 20px;
@@ -285,6 +287,7 @@
 }
 
 
+/* kontajnery pre tlačidlá */
 .cat_btn_container, .cat_btn_container_sizes {
   display: flex;
   flex-wrap: wrap;
@@ -302,7 +305,7 @@
 
 
 
-
+/* filter button pre farby */
 .cat_entry_btn {
   display: flex;
   align-items: center;
@@ -318,7 +321,7 @@
 }
 
 
-
+/* filter btn pre veľkosti */
 .cat_entry_btn_size {
   display: flex;
   height: 45px;
@@ -335,10 +338,15 @@
 }
 
 
- 
+/* kliknuté tlačidlo farby */
+.cat_entry_btn.clicked, .cat_entry_btn_size.clicked {
+  outline: 2px solid black;
+}
 
 
 
+
+/* 2+ kategorie na jednom tabe */
 .joined_cat_content {
   display: flex;
   flex-direction: column;
@@ -355,14 +363,14 @@
 
 
 /* custom slider */
-.slider-container {
+.slider_container {
   position: relative;
   width: 92%;
   margin: 20px;
 }
 
-/* Spoločný track */
-.slider-track {
+/* spoločný slider */
+.slider_track {
   position: absolute;
   width: 99%;
   left: 1%;
@@ -373,8 +381,8 @@
   z-index: 1;
 }
 
-/* Dynamicky vyfarbená časť medzi thumbs */
-.filled-track {
+/* dynamicky vyfarbená časť medzi thumbs */
+.filled_track {
   position: absolute;
   height: 5px;
   background: #5A5A5A;
@@ -385,7 +393,7 @@
   z-index: 2;
 }
 
-/* Štýl sliderov */
+/* slidery */
 input[type="range"] {
   position: absolute;
   width: 100%;
@@ -398,7 +406,7 @@ input[type="range"] {
   z-index: 3;
 }
 
-/* Štýl thumbs */
+/* thumbs */
 input[type="range"]::-webkit-slider-thumb {
   width: 24px;
   height: 24px;
@@ -460,6 +468,7 @@ input[type="range"]::-webkit-slider-thumb {
 
 
 
+/* zobraziť výsledky filtrovania, momentálne zatvára menu */
 #applyFilter {
   display: flex;
   align-items: center;
@@ -468,7 +477,6 @@ input[type="range"]::-webkit-slider-thumb {
   height: 40px;
   font-size: 18px;
   
- 
   border-radius: 0;
   border: none;
   background-color: black;
