--- a/css/product_slider.css
+++ b/css/product_slider.css
@@ -1,11 +1,14 @@
 .product_slider {
-    margin-top: 100px;
+    margin-bottom: 100px;
     height: 300px;
+
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
 }
 
-
 .slider-container {
-    margin: 90px auto;
+    margin: 0 auto;
     width: 80%;
     height: 100px;
     /* display: flex;
@@ -55,4 +58,11 @@
     cursor: pointer;
     margin: 0 5px;
     z-index: 1000; /* ak sú prekryté inými prvkami */
+}
+
+
+.label {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 50px;
 }
