--- a/css/newsletter.css
+++ b/css/newsletter.css
@@ -2,6 +2,7 @@
 .newsletter {
     background-color: rgb(0, 0, 0);
     width: 100%;
+    min-width: 580px;
     height: 300px;
     display: flex;
     /* align-items: center; */
