--- a/css/banner_hlavna_ponuka.css
+++ b/css/banner_hlavna_ponuka.css
@@ -6,23 +6,40 @@
     align-items: center;
     justify-content: center;
 }
-
+/* 
 .banner_hlavna_ponuka_container {
     width: 75%;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-}
+    gap: 20px;
+} */
 
 
 .tenisky_banner, .kopacky_banner, .lopty_banner {
-    width: 30%;
-    height: 300px;
+    max-width: 300px;
+    max-height: 300px;
+    min-width: 280px;
+    min-height: 280px;
+    height: 40vh;
     background-color: gray;
     display: flex;
     align-items: center;      /* Vertikálne centrovanie */
     justify-content: center;  /* Horizontálne centrovanie */
     transition: transform 0.3s ease-in-out;
+    aspect-ratio: 1 / 1;
+}
+
+.banner_hlavna_ponuka_container {
+    /* width: 75%; */
+    width: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: min(20px, 5vw);
+    gap: 20px;
+    height: auto;
+    justify-content: center;
 }
 
 .tenisky_banner:hover, 
@@ -32,4 +49,27 @@
 .lopty_banner:hover, 
 .lopty_banner:active{
     transform: scale(1.1); /* Zväčší element na 110% */
+}
+@media (max-width: 900px) {
+    .banner_hlavna_ponuka_container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        justify-content: center;
+    }
+    .lopty_banner {
+        grid-column: span 2;
+        justify-self: center;
+    }
+}
+
+@media (max-width: 700px) {
+    .banner_hlavna_ponuka_container {
+        grid-template-columns: 1fr;
+        gap: 20px;
+        justify-content: center;
+    }
+    .lopty_banner, .tenisky_banner, .kopacky_banner {
+        grid-column: span 1;
+        justify-self: center;
+    }
 }
