--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,8 @@
 
+.footer_social{
+    display: flex;
+    flex-direction: column;
+}
 .footer_asi {
     margin-top: 20px;
     background-color: black;
@@ -10,21 +14,24 @@
 }
 
 .footer_container{
-    width: 95%;
+    width: 98%;
     height: 250px;
     background-color: black;
-    display: flex;
+    
     /*justify-content: space-between;*/ /* Rozmiestniť divy na kraje */
-    justify-content:center;
-    align-items: center;
-    gap: 100px;
+    /* display: flex; */
+    /* justify-content:center;
+    align-items: center; */
+    display: grid;
+    /* grid-template-columns: 800px 500px; */
+    grid-template-columns: 1fr 1fr;
+    gap: 5vw;
 }
 
 
 .obchod {
     background-color: rgb(49, 49, 49);
-    /* width: 200px; */
-    min-width: 200px;
+    min-width: 250px;
     flex: 1;
     height: 90%;
     display: flex;
@@ -34,7 +41,9 @@
 }
 
 .obchod_info {
-    width: 1000px;
+    /* width: 1000px; */
+    width: 100%;
+    min-height: 200px;
     height: 90%;
     background-color: rgb(49, 49, 49);
     justify-content: space-between; 
@@ -70,14 +79,14 @@
 
 
 .podmienky {
-    width: 800px;
+    /* width: 800px; */
     height: 80%;
     /* background-color: rgb(49, 49, 49); */
     /* justify-content: space-between; */
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
 }
 
 .podmienky1 {
@@ -113,13 +122,15 @@
 .fa-facebook-f {
     color: rgb(169, 98, 255);
     font-size: 50px;
-    margin-left: -50px;
+    /* margin-left: -50px; */
+    margin-right: 20px;
 }
 
-.fa-instagram, .fa-x-twitter, .fa-linkedin-in {
+.fa-instagram, .fa-x-twitter {
     color: rgb(169, 98, 255);
     font-size: 50px;   
-    margin-left: 20px;
+    margin-right: 30px;
+    margin-top: 20px;
 }
 
 
@@ -128,12 +139,43 @@
 }
 
 
-@media (max-width: 1024px) {
+@media (max-width: 1100px) {
     .footer_container {
-        flex-direction: column;
-        gap: 50px;
+        grid-template-columns: 800px;
+        grid-template-rows: auto auto;
         height: auto;
         padding: 20px 0;
+        justify-content: center;
+    }
+    .obchod_info {
+        height: 100%;
+    }
+    .footer_asi{
+        height: auto;
+    }
+    .footer_social{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px;
+        justify-content: center;
+    }
+    .fa-x-twitter {
+        grid-column: span 2;
+        justify-self: center;
+    }
+    .fa-instagram, .fa-x-twitter, .fa-facebook-f {
+        margin: 0px;
+    }
+}
+
+
+@media (max-width: 800px) {
+    .footer_container {
+        display: grid; /* ak stále používaš grid */
+        grid-template-columns: 1fr; /* alebo inú vhodnú šírku */
+        height: auto;
+        padding: 20px;
+        justify-items: center; /* centrovanie všetkých položiek */
     }
     .footer_asi{
         height: auto;
@@ -159,6 +201,7 @@
     }
 
     .podmienky {
+        margin-top: 30px;
         flex-direction: column;
         width: 100%;
         gap: 20px;
@@ -169,8 +212,14 @@
         width: 100%;
     }
 
-    .fa-facebook-f, .fa-instagram, .fa-x-twitter, .fa-linkedin-in {
-        font-size: 40px;
-        margin: 10px;
+    .footer_social{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 30px;
+        justify-content: center;
+    }
+    .fa-instagram, .fa-x-twitter, .fa-facebook-f {
+        grid-column: span 1;
+        justify-self: center;
     }
 }
