--- a/css/filter_menu.css
+++ b/css/filter_menu.css
@@ -5,27 +5,28 @@
 }
 
 
-.text_filter h1 { 
+.text_filter h1 { /* odsadenie nadpisu */
 	padding-left: 20px;
 }
 
 
-.filter_menu { 
+.filter_menu { /* obsahuje filter tlačidlá */
 	display: flex;
 	justify-content: left;
 	width: 100vw;
-	gap: 20px;
+	gap: clamp(5px, 2vw, 10px);
 	box-sizing: border-box;
 	padding: 0px 20px 20px 20px;
 	overflow: hidden;
 }
 
 
+
 .filter_kategorie {
 	display: flex;
-	flex-grow: 1;
-	justify-content: space-between;
-	gap: clamp(5px, 2vw, 10px); /* zmenšuje medzeru medzi buttonami podľa veľkosti obrazovky*/
+	width: 100%;
+	justify-content: space-around;
+	gap: clamp(5px, 2vw, 2px);
 	overflow: hidden;
 	scroll-behavior: smooth;
 }
@@ -33,7 +34,7 @@
 
 .filter_menu_item {
 	min-width: 160px;
-	max-width: 160px;
+	
 	background-color: white;
 	line-height: 170%;
 	border: 1px solid #D9D9D9;
@@ -46,7 +47,7 @@
 }
 
 
-.filter_menu_item.selected {
+.filter_menu_item.special {
 	flex-grow: 0;
 	width: 140px;
 	color: white;
@@ -60,7 +61,7 @@
 }
 
 
-.filter_menu_item.selected:hover { /* pre Filter tlačidlo zvlášť */
+.filter_menu_item.special:hover { /* pre Filter tlačidlo zvlášť */
 	background-color: white;
 }
 
@@ -88,3 +89,16 @@
 .filter_sipka img:hover, .filter_opacna_sipka img:hover {
 	filter: drop-shadow(0 0 5px black);
 }
+
+
+
+
+
+@media (max-width: 426px) {
+    .filter_menu_item.special {
+    	width: 100%;
+    } 
+
+}
+
+
