--- a/css/orderby_menu.css
+++ b/css/orderby_menu.css
@@ -1,12 +1,15 @@
 .orderby_menu {
 	display: flex;
 	align-items: center;
-	gap: 20px;
+	gap: clamp(10px, 2vw, 20px);
 	padding-bottom: 10px;
 	text-wrap: nowrap;
 	user-select: none;
     align-self: flex-start; /* nezarovná sa podľa parenta na stred, ale ostane vľavo */
-    padding-left: 5.86vw;
+    /*5.86vw*/
+    padding-left: clamp(20px, 5.86vw, 5.86vw);
+
+    
     font-size: 20px;
 }
 
@@ -14,12 +17,21 @@
 .orderby_menu select {
 	padding: 5px;
 	background-color: white;
-	width: 220px;
+	
+	
+	
+	width: clamp(150px, 100%, 220px);
 	border: 1px solid #D9D9D9;
 	color: #808080;
 	font-size: 20px;
 	height: 45px;
-	padding-left: 10px;
+	padding: 10px;
+	margin-right: 15px;
+	text-overflow: ellipsis;
 	user-select: none; /* aby sa to nedalo s myšou selectnut text */
+}
 
+
+.orderby_menu p {
+	padding-left: 0px;
 }
