--- a/css/product_item.css
+++ b/css/product_item.css
@@ -4,7 +4,8 @@
 	text-align: center;
     background-color: white;
 
-    width: 365px;
+
+    width: clamp(320px, 100%, 365px);
     height: 450px;
 }
 
