--- a/css/newsletter.css
+++ b/css/newsletter.css
@@ -2,17 +2,18 @@
 .newsletter {
     background-color: rgb(0, 0, 0);
     width: 100%;
-    min-width: 580px;
+    /* min-width: 580px; */
     height: 300px;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 
 .newsletter_label{
     color: white;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     font-size: 50px;
     font-weight: bold;
     color: rgb(169, 98, 255);
@@ -65,3 +66,11 @@
     margin-right: 30px;   
     margin-left: -20px;
 }
+
+
+@media (max-width: 800px) {
+    .newsletter {
+        height: 380px;
+    }
+}
+
