ked je malý mobil, tak sa skracuje meno aktívneho filtra pre veľkosť, mobile S skrášlenie orderby a filter btn, pridal som viac obrázkov, nech to je pekné, sub 500px zmizne úplne filter menu, dá sa posúvať menu na mobile ak je <1000 a viac >500 cca

--- a/css/filter_big_menu.css
+++ b/css/filter_big_menu.css
@@ -1,4 +1,16 @@
+body {
+  overflow-x: hidden;
+}
 
+
+/* nech sa pri zobrazení filtra neposúva navbar */
+.navbar {
+  width: 100vw !important;
+}
+
+.right_part {
+  margin-right: 15px !important;
+}
 
 
 
@@ -620,11 +632,6 @@ input[type="range"]::-webkit-slider-thumb {
         height: 100%;
     }
 
-
-    .filter_kategorie {
-      display: none;
-    }
-
 }
 
 
@@ -657,7 +664,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 
-@media (max-width: 426px) {
+@media (max-width: 430px) {
     
     
     #sel_filter_container {
@@ -682,8 +689,6 @@ input[type="range"]::-webkit-slider-thumb {
     .cat_btn_container, .cat_btn_container_sizes {
       justify-content: left;
     }
-
-
 
 }
 
