--- a/css/newsletter.css
+++ b/css/newsletter.css
@@ -35,6 +35,7 @@
     margin: 0 auto;
     width: 300px;
     height: 40px;
+    padding-left: 10px;
     border: none;
     outline: none;
     box-shadow: none;
