--- a/css/orderby_menu.css
+++ b/css/orderby_menu.css
@@ -6,10 +6,7 @@
 	text-wrap: nowrap;
 	user-select: none;
     align-self: flex-start; /* nezarovná sa podľa parenta na stred, ale ostane vľavo */
-    /*5.86vw*/
-    padding-left: clamp(20px, 5.86vw, 5.86vw);
-
-    
+    margin-left: max(10px, 7.15vw);
     font-size: 20px;
 }
 
@@ -18,9 +15,7 @@
 	padding: 5px;
 	background-color: white;
 	
-	
-	
-	width: clamp(150px, 100%, 220px);
+	width: clamp(150px, 40vw, 220px);
 	border: 1px solid #D9D9D9;
 	color: #808080;
 	font-size: 20px;
@@ -35,3 +30,14 @@
 .orderby_menu p {
 	padding-left: 0px;
 }
+
+
+@media (max-width: 350px) {
+    
+    .orderby_menu {
+    	margin: 0px auto;
+    }
+}
+
+
+
