--- a/css/product_item.css
+++ b/css/product_item.css
@@ -4,8 +4,8 @@
 	text-align: center;
     background-color: white;
 
-
-    width: clamp(320px, 100%, 365px);
+    /*width: clamp(320px, 320px, 365px);*/
+    width: min(100%, 365px);
     height: 450px;
 }
 
@@ -25,12 +25,11 @@
 
 .item_img img {
 	width: 100%;
+	
     height: 100%;
 	object-fit: cover;
 	user-select: none;
 }
-
-
 
 
 
