--- a/css/product_item.css
+++ b/css/product_item.css
@@ -4,7 +4,6 @@
 	text-align: center;
     background-color: white;
 
-    /*width: clamp(320px, 320px, 365px);*/
     width: min(100%, 365px);
     height: 450px;
 }
@@ -15,6 +14,35 @@
 }
 
 
+.product_item_sale {
+	display: flex;
+	position: relative;
+	flex-direction: column;
+	text-align: center;
+    background-color: white;
+
+    width: min(100%, 365px);
+    height: 450px;
+}
+
+
+.product_item_sale:hover {
+	outline: 1px solid #D9D9D9;
+}
+
+
+
+.sale_placeholder {
+	position: absolute;
+	top: 20px;
+	right: 15px;
+	border: 1px solid #808080;
+	color: #808080;
+	border-radius: 12px;
+	padding: 5px 10px;
+}
+
+
 .item_img {
 	width: 100%;
     height: 80%;
@@ -22,15 +50,9 @@
 }
 
 
-
 .item_img img {
 	width: 100%;
-	
     height: 100%;
 	object-fit: cover;
 	user-select: none;
 }
-
-
-
-
