statický kontent pre polozku produktu a custom popup nedokončené

--- a/css/orderby_menu.css
+++ b/css/orderby_menu.css
@@ -32,9 +32,10 @@
 }
 
 
-@media (max-width: 350px) {
+@media (max-width: 500px) {
     
     .orderby_menu {
+    	padding-left: 15px;
     	margin: 0px auto;
     }
 }
