admin dashboard, univerzálny popup hotový

--- a/css/popup_overlay.css
+++ b/css/popup_overlay.css
@@ -1,4 +1,4 @@
-.popup_overlay {
+#popup_overlay {
   position: fixed; 
   top: 0;
   
@@ -16,7 +16,7 @@
 
 }
 
-.popup_overlay.active {
+#popup_overlay.active {
 	display: flex;
 }
 
