--- a/css/menu_bar.css
+++ b/css/menu_bar.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: white;
     margin-top: 80px; /* Posunies vsetko, aby obsah nebol zakryty navbarom */
 }
   
