--- a/css/text_divider.css
+++ b/css/text_divider.css
@@ -1,9 +1,21 @@
 .text_divider {
 	text-align: center;
 	margin-bottom: 50px;
-	font-size: 30px;
+	margin-top: 60px;
+	font-size: 35px;
 	width: 100%;
 }
+
+.text_divider.padded {
+	margin-top: 200px;
+	margin-bottom: 10px;
+}
+
+.text_divider h1 {
+	font-size: 35px;
+	margin: 0px;
+}
+
 
 .hr_divider {
 	width: 85%;
