--- a/css/polozka.css
+++ b/css/polozka.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     margin: 100px auto;
-    background-color: white;
+    background-color: rgb(247, 247, 247);
     padding: 20px;
 }
 
